# sealy

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: pypublish.yml  pytest.yml  test.yml
seal/: CHANGELOG.md  Cargo.toml
seal-py/: Cargo.toml  pyproject.toml
seal-py/python/sealy/: __init__.py  sealy.pyi
seal-py/python/tests/: test_bfv_encoder.py  test_bfv_evaluator.py  test_ckks_encoder.py  test_decryptor.py  test_pickle.py  test_tensor_eval.py
seal-py/src/: ciphertext.rs  context.rs  context_data.rs  decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  keys.rs  lib.rs  memory.rs  parameters.rs  plaintext.rs  poly_array.rs  tensor.rs
seal-rs/: Cargo.toml  README.md  build.rs
seal-rs/examples/: avg_float.rs  encode_float.rs  multiply_plain.rs  sum_float.rs  sum_int.rs  tensor.rs
seal-rs/src/: context.rs  decryptor.rs  error.rs  lib.rs  modulus.rs  poly_array.rs  serialization.rs
seal-rs/src/encoder/: bfv.rs  ckks.rs
seal-rs/src/evaluator/: base.rs  ckks.rs
seal-rs/src/ext/tensor/: encoder.rs  evaluator.rs  mod.rs
seal-rs/src/parameters/: mod.rs
seal-rs/tests/: assumptions.rs
seal/benches/: bfv_bench.rs  ckks_bench.rs  tensor_bench.rs
seal/src/: encryptor.rs  lib.rs
seal/tests/: test_common.rs
sealy/: CHANGELOG.md  Cargo.toml  README.md  build.rs
sealy-py/: Cargo.toml  pyproject.toml
sealy-py/python/sealy/: __init__.py  sealy.pyi
sealy-py/python/tests/: test_encryptor.py  test_keygen.py  test_parameters.py  test_pickle.py  test_poly_array.py
sealy-py/src/: context.rs  decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  keys.rs  plaintext.rs  poly_array.rs  tensor.rs
sealy-python/: .gitignore  CHANGELOG.md  Cargo.toml  pyproject.toml
sealy-python/python/sealy/: __init__.py  parameters.py  sealy.pyi
sealy-python/python/tests/: test_batched_eval.py  test_bfv_encoder.py  test_bfv_evaluator.py  test_ckks_encoder.py  test_context.py  test_decryptor.py  test_encryptor.py  test_keygen.py  test_parameters.py  test_pickle_context.py  test_plaintext.py  test_poly_array.py
sealy-python/src/: batched.rs  ciphertext.rs  context.rs  context_data.rs  decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  keys.rs  lib.rs  memory.rs  parameters.rs  plaintext.rs  poly_array.rs
sealy/benches/: batch_bench.rs  bfv_bench.rs  ckks_bench.rs  tensor_bench.rs
sealy/examples/: avg_float.rs  batch.rs  encode_float.rs  multiply_plain.rs  sum_float.rs  sum_int.rs  tensor.rs
sealy/src/: ciphertext.rs  components.rs  context.rs  context_data.rs  decryptor.rs  encryptor.rs  key_generator.rs  lib.rs  memory.rs  modulus.rs  plaintext.rs  poly_array.rs
sealy/src/encoder/: bfv.rs  ckks.rs  mod.rs
sealy/src/evaluator/: base.rs  bfv.rs  ckks.rs  mod.rs
sealy/src/ext/: mod.rs
sealy/src/ext/batched/: decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  mod.rs
sealy/src/ext/tensor/: decryptor.rs  encryptor.rs  mod.rs
sealy/src/parameters/: bfv.rs  ckks.rs  mod.rs
sealy/tests/: assumptions.rs  test_common.rs
thorn/: Cargo.toml
thorn-core/: Cargo.toml  README.md  build.rs
thorn-core/proto/thorn/: coordinator.proto  driver.proto  error.proto  fleet.proto  node.proto  recordset.proto  task.proto
thorn-core/src/: lib.rs
thorn-core/src/protocol/: coordinator.rs  driver.rs  error.rs  fleet.rs  mod.rs  node.rs  recordset.rs  task.rs
thorn-core/src/protocol/autogen/: mod.rs  thorn_proto.rs
thorn-crypto/: Cargo.toml  README.md
thorn-crypto/benches/: batch_bench.rs
thorn-crypto/examples/: sum_float.rs
thorn-crypto/src/: ciphertext.rs  context.rs  encryptor.rs  key_generator.rs  lib.rs  memory.rs  modulus.rs  plaintext.rs
thorn-crypto/src/encoder/: bfv.rs  bfv_float.rs  ckks.rs  mod.rs
thorn-crypto/src/evaluator/: bfv.rs
thorn-crypto/src/fhe/: mod.rs
thorn-crypto/src/fhe/batched/: decryptor.rs  encoder.rs  encryptor.rs  evaluator.rs  mod.rs
thorn-crypto/src/fhe/seal/: mod.rs
thorn-crypto/src/fhe/seal/batched/: encoder.rs  evaluator.rs
thorn-crypto/src/parameters/: ckks.rs  mod.rs
thorn-crypto/tests/: avg_float_tests.rs  batch_tests.rs  mod.rs  sum_float_tests.rs  sum_int_tests.rs  test_common.rs
thorn-crypto/tests/fhe_tests/: avg_float_tests.rs  batch_tests.rs  sum_float_tests.rs  sum_int_tests.rs
thorn-seal/: Cargo.toml  bindgen_wrapper.h  build.rs
thorn-seal/benches/: batch_bench.rs  bfv_bench.rs  ckks_bench.rs
thorn-seal/examples/: avg_float.rs  batch.rs  sum.rs  sum_float.rs  sum_int.rs
thorn-seal/src/: batch.rs  bfv_evaluator.rs  context.rs  data_structures.rs  decryptor.rs  encoder.rs  encryption_parameters.rs  encryptor.rs  encryptor_decryptor.rs  error.rs  evaluator.rs  evaluator_base.rs  key_generator.rs  lib.rs  modulus.rs  plaintext.rs  plaintext_ciphertext.rs  poly_array.rs
thorn-seal/src/decryptor/: batch.rs  mod.rs
thorn-seal/src/encoder/: batch.rs  bfv.rs  ckks.rs  mod.rs
thorn-seal/src/encryptor/: batch.rs  mod.rs
thorn-seal/src/evaluator/: base.rs  batch.rs  bfv.rs  ckks.rs  mod.rs
thorn-seal/src/parameters/: bfv.rs  ckks.rs  mod.rs
thorn-seal/src/tensor/: encoder.rs  mod.rs
thorn-seal/tests/: assumptions.rs  test_common.rs
thorn/src/: lib.rs
