[package]
name = "sealy-python"
version = "0.1.4"
edition = "2021"
authors = ["marcosfpr <mfprezende@gmail.com>"]
description = "Python bindings for the SEALy library"
repository = "https://github.com/marcosfpr/sealy"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["fhe", "homomorphic", "encryption", "ckks", "bfv", "seal", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[lib]
name = "sealy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }

sealy = { path = "../sealy" }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.74"


[dev-dependencies]

