[package]
name = "sealy"
version = "0.1.1"
edition = "2021"
authors = ["marcosfpr <mfprezende@gmail.com>"]
description = "Rust bindings for Microsoft's SEAL Fully Homomorphic Encryption (FHE) library"
repository = "https://github.com/marcosfpr/sealy"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["fhe", "phe", "homomorphic", "encryption", "seal"]
categories = ["science", "cryptography"]

[dependencies]
serde = { workspace = true } 
thiserror = { workspace = true }
static_assertions = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
link-cplusplus = "1.0.9"

[build-dependencies]
cmake = "0.1.46"
bindgen = "0.69.4"

[dev-dependencies]
anyhow = { workspace = true } 
serde_json = "1.0.74"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
hexl = []
transparent-ciphertexts = []
deterministic = []
insecure-params = []

[[example]]
name = "avg_float"

[[example]]
name = "batch"

[[example]]
name = "sum_float"

[[example]]
name = "sum_int"

[[example]]
name = "multiply_plain"

[[bench]]
name = "ckks_bench"
harness = false

[[bench]]
name = "bfv_bench"
harness = false

[[bench]]
name = "batch_bench"
harness = false

