[package]
name = "thorn-crypto"
version = "0.1.0"
edition = "2021"
authors = ["marcosfpr <mfprezende@gmail.com>"]
description = "thorn cryptography primitives"
repository = "https://github.com/marcosfpr/thorn"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]


[badges]
maintenance = { status = "passively-maintained" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thorn-seal = { path = "../thorn-seal" }

[dev-dependencies]
anyhow = { workspace = true } 
serde_json = "1.0.74"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "ckks_bench"
harness = false

[[bench]]
name = "bfv_bench"
harness = false

[[bench]]
name = "batch_bench"
harness = false
