[package]
name = "thorn"
version = "0.1.0"
edition = "2021"
authors = ["marcosfpr <mfprezende@gmail.com>"]
description = "Thorn: The (Un)Friendly Federated Learning Framework"
repository = "https://github.com/marcosfpr/thorn"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "ai"]

[badges]
maintenance = { status = "passively-maintained" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorn-core = { path = "../thorn-core", version = "0.1.0" }
